# mini-projet-reseau

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c  defines.h  envoyer.c  getch.h  program.c  programmePC1.c  programmePC2.c  receive.c  recevoir.c  send.c  server.c  serveur.c  signatures.h  sleep.h
include/: packet.h
include/network/: signatures.h
include/utils/: colors.h  defines.h  getch.h  messages.h
src/: main.c  packet.c
src/network/: client.c  receive.c  send.c  server.c
src/utils/: messages.c
